--- a/index.css
+++ b/index.css
@@ -58,7 +58,6 @@ h3 {
     grid-template-columns: 1fr;
     margin-left: 10px;
     margin-right: 10px;
-    gap: 0px;
   }
 
   h1 {
@@ -75,6 +74,7 @@ main {
   margin-left: 10%;
   margin-right: 10%;
   margin-top: 150px;
+  margin-bottom: 150px;
 }
 
 .image {
